<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"

	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"

	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.zensar.zenfulcrum.projectdefinition</groupId>

	<artifactId>project-definition-service</artifactId>

	<version>0.0.1-SNAPSHOT</version>

	<packaging>war</packaging>

	<name>project-definition-service</name>

	<description>Demo project for Spring Boot</description>



	<parent>

		<groupId>org.springframework.boot</groupId>

		<artifactId>spring-boot-starter-parent</artifactId>

		<version>2.2.5.RELEASE</version>

		<relativePath /> <!-- lookup parent from repository -->

	</parent>



	<properties>

		<java.version>14</java.version>

		<spring-cloud.version>Greenwich.SR1</spring-cloud.version>

		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>

		<org.projectlombok.version>1.18.12</org.projectlombok.version>

		<spring.boot.starter.actuator.version>2.2.4
		</spring.boot.starter.actuator.version>

		<springfox.swagger2.version>2.9.2</springfox.swagger2.version>

	</properties>



	<dependencies>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-web</artifactId>

		</dependency>

		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->

		<dependency>

			<groupId>org.modelmapper</groupId>

			<artifactId>modelmapper</artifactId>

			<version>2.4.3</version>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-devtools</artifactId>

			<scope>runtime</scope>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-tomcat</artifactId>

			<scope>provided</scope>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-data-jpa</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-test</artifactId>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>org.projectlombok</groupId>

			<artifactId>lombok</artifactId>

			<scope>provided</scope>

		</dependency>

		<dependency>

			<groupId>commons-lang</groupId>

			<artifactId>commons-lang</artifactId>

			<version>2.6</version>

		</dependency>

		<!-- Swagger -->

		<dependency>

			<groupId>io.springfox</groupId>

			<artifactId>springfox-swagger2</artifactId>

			<version>${springfox.swagger2.version}</version>

		</dependency>



		<dependency>

			<groupId>io.springfox</groupId>

			<artifactId>springfox-swagger-ui</artifactId>

			<version>${springfox.swagger2.version}</version>

		</dependency>



		<dependency>

			<groupId>io.springfox</groupId>

			<artifactId>springfox-bean-validators</artifactId>

			<version>${springfox.swagger2.version}</version>

		</dependency>

		<!-- Swagger -->

		<dependency>

			<groupId>org.apache.commons</groupId>

			<artifactId>commons-collections4</artifactId>

			<version>4.1</version>

		</dependency>



		<dependency>

			<groupId>org.json</groupId>

			<artifactId>json</artifactId>

			<version>20210307</version>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-mail</artifactId>

		</dependency>



		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-data-redis</artifactId>

		</dependency>

		<dependency>

			<groupId>mysql</groupId>

			<artifactId>mysql-connector-java</artifactId>

		</dependency>

	</dependencies>

	<dependencyManagement>

		<dependencies>

			<dependency>

				<groupId>org.springframework.cloud</groupId>

				<artifactId>spring-cloud-dependencies</artifactId>

				<version>${spring-cloud.version}</version>

				<type>pom</type>

				<scope>import</scope>

			</dependency>

			<dependency>

				<groupId>org.springframework.boot</groupId>

				<artifactId>spring-boot-starter-actuator</artifactId>

				<version>${spring.boot.starter.actuator.version}</version>

			</dependency>





		</dependencies>

	</dependencyManagement>

	<build>

		<plugins>

			<plugin>

				<groupId>org.springframework.boot</groupId>

				<artifactId>spring-boot-maven-plugin</artifactId>

			</plugin>



			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-compiler-plugin</artifactId>

				<configuration>

					<source>${java.version}</source>

					<target>${java.version}</target>

					<annotationProcessorPaths>

						<path>

							<groupId>org.projectlombok</groupId>

							<artifactId>lombok</artifactId>

							<version>${org.projectlombok.version}</version>

						</path>

						<path>

							<groupId>org.mapstruct</groupId>

							<artifactId>mapstruct-processor</artifactId>

							<version>${org.mapstruct.version}</version>

						</path>

					</annotationProcessorPaths>

					<compilerArgs>

						<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>

						<arg>-Amapstruct.defaultComponentModel=spring</arg>

					</compilerArgs>

				</configuration>

			</plugin>



			<!-- <plugin> <groupId>org.jacoco</groupId> <artifactId>jacoco-maven-plugin</artifactId> 
				<version>0.8.5</version> <configuration> </configuration> <executions> <execution> 
				<id>coverage-initialize</id> <goals> <goal>prepare-agent</goal> </goals> 
				</execution> <execution> <id>coverage-report</id> <phase>post-integration-test</phase> 
				<goals> <goal>report</goal> </goals> </execution> </executions> </plugin> -->

			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-surefire-plugin</artifactId>

				<configuration>

					<forkCount>3</forkCount>

					<reuseForks>true</reuseForks>

					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>

				</configuration>

			</plugin>



		</plugins>

		<finalName>${artifactId}</finalName>

	</build>

</project>